fix: 🐛 svg stroke causes overflow

--- a/src/ExplanationWindow.scss
+++ b/src/ExplanationWindow.scss
@@ -174,6 +174,7 @@ $open-anim-duration: 0.5s;
 
         #demonstration1 {
             margin-block-start: 0;
+            overflow: hidden;
 
             #stroke-container {
                 margin-top: 0.7em;
@@ -190,6 +191,7 @@ $open-anim-duration: 0.5s;
 
             .stroke {
                 @include partial-stroke($open-anim-duration * 2, 20%);
+
                 translate: 0 calc(1.0em - 100%);
                 height: 5.2rem;
             }
@@ -200,6 +202,10 @@ $open-anim-duration: 0.5s;
                 height: 3.5rem !important;
                 translate: -0.2rem -40% !important;
             }
+        }
+
+        #demonstration-last-n-digits, #demonstration-digit-sum, #demo7 {
+            overflow: auto;
         }
 
         #demonstration-digit-sum {
@@ -301,8 +307,6 @@ $open-anim-duration: 0.5s;
             $margin-extended: 0.1em;
             $margin-extra-condensed: -1.1em;
             $margin-extra-extended: 0.3em;
-
-            overflow: auto;
 
             @mixin translate-left($name, $from, $to) {
                 @keyframes #{$name} {
@@ -588,8 +592,6 @@ $open-anim-duration: 0.5s;
             }
 
             #demonstration-last-n-digits {
-                overflow: hidden;
-
                 h1 {
                     &.multi-row {
                         font-size: 2.3rem;
